# python-project-83

./: .env-example  .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  ruff.toml
.github/workflows/: python-ci.yml
page_analyzer/: ConnectionPool.py  __init__.py  app.py  connection_pool.py
page_analyzer/models/: MixedModel.py  UrlChecksModel.py  UrlsModel.py  __init__.py  mixed_model.py  url_checks_model.py  urls_model.py
page_analyzer/templates/: 404.html  error.html  home.html  main_layout.html
page_analyzer/templates/urls/: index.html  new.html  show.html
page_analyzer/utils/: helpers.py
tests/: conftest.py  test_app.py  test_helpers.py
tests/test_data/: page.html
